test/trivial/roxana/test_param_decl2.good
test_param_decl2.chpl:2: error: Initializing parameter 'h' to value not known at compile time
