test/trivial/roxana/test_param_decl2.chpl
var t : int;
param h = t;
write(h);
